--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,4 +1,5 @@
 @import "./common/_common";
+@import "./common/_font";
 @import "./common/_layout";
 
 #wrap{
@@ -106,6 +107,163 @@
                     &.item-market {
                         background-color: #00AEA4;
                         @include background(main, main_xpert_bg, png, no-repeat, 50%, right, bottom);
+                    }
+                }
+            }
+        }
+    }
+    // 서브콘텐츠(제품상세페이지)
+    .pd-wrap{
+        padding: 2.6rem 0 6rem;
+        .con-box{max-width: calc(100% - 12rem);}
+        .pd-detail{
+            .con-tit{
+                > strong{
+                    font-family: $play;
+                    font-size: 4rem;
+                    font-weight: bold;
+                    border-bottom: 2px solid $mainColor;
+                }
+            }
+            &-list{
+                margin-top: 8.6rem;
+                display: flex;
+                > div{
+                    padding: 0 3vw;
+                    &:first-child{
+                        padding-left: 1.5vw;
+                        max-width: 37%;
+                    }
+                    &:nth-child(2){max-width: 40%;}
+                    &:last-child{max-width: 25%;}
+                    &:not(:last-child){border-right: 1px solid $gray03;}
+                    .item-cont{
+                        position: relative;
+                        .tit-tag{
+                            display: inline-block;
+                            padding: 1.2rem 2rem;
+                            color: $white;
+                            font-size: 2rem;
+                            font-weight: 600;
+                            background: $mainColor;
+                            position: absolute;
+                            top: -1.4rem;
+                            left: -1.4rem;
+                            z-index: 1;
+                        }
+                        .catalog{
+                            position: relative;
+                            &:hover{
+                                .catalog-area{
+                                    opacity: 1;
+                                    visibility: visible;
+                                }
+                            }
+                            &-area{
+                                width: 100%;
+                                height: 100%;
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                background: rgba($white, .7);
+                                transition: all .25s;
+                                opacity: 0;
+                                visibility: hidden;
+                                @include flexbox(row, center, center);
+                                > ul{
+                                    gap: 1rem;
+                                    @include flexbox(column, flex-start, flex-start);
+                                    li{
+                                        a{
+                                            width: 13.5rem;
+                                            padding: .8rem;
+                                            border-radius: 3rem;
+                                            font-size: 2rem;
+                                            font-weight: 500;
+                                            text-align: center;
+                                            background: $white;
+                                            transition: all .25s;
+                                            @include border(1px, $black);
+                                            &.on, &:hover{
+                                                background: $mainColor;
+                                                border-color: $mainColor;
+                                                color: $white;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                        .img-wrap{
+                            position: relative;
+                            box-shadow: rgba($black, 0.2) 0px 7px 29px 0px;
+                            img{width: 100%;}
+                        }
+                        .txt-wrap{
+                            margin-top: 2rem;
+                            > strong{
+                                font-size: 2.4rem;
+                                font-weight: 600;
+                                + .list-type{margin-top: 1rem;}
+                            }
+                            .tag-list{
+                                > li{
+                                    gap: .8rem;
+                                    font-size: 2.4rem;
+                                    font-weight: 600;
+                                    @include flexbox(row, flex-start, center);
+                                    &:not(:first-child){margin-top: .8rem;}
+                                    .tag{
+                                        padding: .6rem .8rem;
+                                        border-radius: .4rem;
+                                        background: $darkblue;
+                                        font-size: 1.6rem;
+                                        font-weight: 600;
+                                        color: $white;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .pd-series{
+            margin-top: 6.4rem;
+            .con-box{
+                box-shadow: rgba($black, 0.2) 7px 7px 29px -7px;
+                border-radius: 2rem;
+                padding: 3.2rem 4.8rem;
+                flex-wrap: wrap;
+                gap: 2rem;
+                @include flexbox(row, space-between, flex-start);
+            }
+            .con-tit{
+                strong{
+                    font-size: 2.4rem;
+                    font-weight: 600;
+                    line-height: 1.4;
+                    + .btn-wrap{margin-top: 2.4rem;}
+                }
+            }
+            &-list{
+                width: 100%;
+                max-width: 1048px;
+                > ul{
+                    gap: 1.2rem;
+                    @include flexbox(row, flex-start, flex-start);
+                    > li{
+                        flex: 1;
+                        padding: 1.2rem;
+                        text-align: center;
+                        @include border(1px, #E4EBEF);
+                        .img-wrap{
+                            img{
+                                margin: 0 auto;
+                                max-width: 100%;
+                            }
+                        }
+                        > strong{font-weight: 600;}
                     }
                 }
             }
