--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -198,7 +198,7 @@ body * {
 .list-type > li {
   position: relative;
   color: #7E7E7E;
-  font-size: 1.4rem;
+  font-size: clamp(12px, 0.75vw, 1.4rem);
   line-height: 1.4;
   padding-left: 1rem;
 }
@@ -219,10 +219,12 @@ body * {
 }
 
 button {
-  min-width: 12rem;
+  min-width: clamp(8rem, 6.35vw, 12rem);
   max-height: 4.4rem;
   padding: 1rem 1.2rem;
-  font-size: 2rem;
+  padding-top: clamp(0.5rem, 0.55vw, 1rem);
+  padding-bottom: clamp(0.5rem, 0.55vw, 1rem);
+  font-size: clamp(12px, 1.05vw, 2rem);
   font-weight: 500;
   color: #222222;
   text-align: center;
@@ -471,7 +473,7 @@ body * {
 .list-type > li {
   position: relative;
   color: #7E7E7E;
-  font-size: 1.4rem;
+  font-size: clamp(12px, 0.75vw, 1.4rem);
   line-height: 1.4;
   padding-left: 1rem;
 }
@@ -492,10 +494,12 @@ body * {
 }
 
 button {
-  min-width: 12rem;
+  min-width: clamp(8rem, 6.35vw, 12rem);
   max-height: 4.4rem;
   padding: 1rem 1.2rem;
-  font-size: 2rem;
+  padding-top: clamp(0.5rem, 0.55vw, 1rem);
+  padding-bottom: clamp(0.5rem, 0.55vw, 1rem);
+  font-size: clamp(12px, 1.05vw, 2rem);
   font-weight: 500;
   color: #222222;
   text-align: center;
@@ -643,7 +647,7 @@ button:active {
 }
 #lnb > ul {
   padding-left: clamp(2rem, 1.5vw, 6rem);
-  gap: clamp(1.6rem, 1.5vw, 4rem);
+  gap: clamp(1.6rem, 2.1vw, 4rem);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -1135,12 +1139,12 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap .pd-detail .con-tit > strong {
   font-family: "Play", sans-serif;
-  font-size: 4rem;
+  font-size: clamp(2rem, 2.2vw, 4rem);
   font-weight: bold;
   border-bottom: 2px solid #ED1C24;
 }
 #wrap .pd-wrap .pd-detail-list {
-  margin-top: 8.6rem;
+  margin-top: clamp(5rem, 9.5vh, 8.6rem);
   display: flex;
 }
 #wrap .pd-wrap .pd-detail-list > div {
@@ -1164,9 +1168,9 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap .pd-detail-list > div .item-cont .tit-tag {
   display: inline-block;
-  padding: 1.2rem 2rem;
+  padding: 1.3vh 1.05vw;
   color: #ffffff;
-  font-size: 2rem;
+  font-size: clamp(12px, 1vw, 2rem);
   font-weight: 600;
   background: #ED1C24;
   position: absolute;
@@ -1197,17 +1201,17 @@ footer .ft-info .lang-wrap .tit::before {
   align-items: center;
 }
 #wrap .pd-wrap .pd-detail-list > div .item-cont .catalog-area > ul {
-  gap: 1rem;
+  gap: 0.45vw;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
 }
 #wrap .pd-wrap .pd-detail-list > div .item-cont .catalog-area > ul li a {
-  width: 13.5rem;
-  padding: 0.8rem;
+  width: clamp(8rem, 7vw, 13.5rem);
+  padding: clamp(0.4rem, 0.45vw, 0.8rem);
   border-radius: 3rem;
-  font-size: 2rem;
+  font-size: clamp(12px, 1.05vw, 2rem);
   font-weight: 500;
   text-align: center;
   background: #ffffff;
@@ -1230,7 +1234,7 @@ footer .ft-info .lang-wrap .tit::before {
   margin-top: 2rem;
 }
 #wrap .pd-wrap .pd-detail-list > div .item-cont .txt-wrap > strong {
-  font-size: 2.4rem;
+  font-size: clamp(14px, 1.25vw, 2.4rem);
   font-weight: 600;
 }
 #wrap .pd-wrap .pd-detail-list > div .item-cont .txt-wrap > strong + .list-type {
@@ -1238,7 +1242,7 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap .pd-detail-list > div .item-cont .txt-wrap .tag-list > li {
   gap: 0.8rem;
-  font-size: 2.4rem;
+  font-size: clamp(14px, 1.25vw, 2.4rem);
   font-weight: 600;
   display: flex;
   flex-direction: row;
@@ -1252,26 +1256,38 @@ footer .ft-info .lang-wrap .tit::before {
   padding: 0.6rem 0.8rem;
   border-radius: 0.4rem;
   background: #253149;
-  font-size: 1.6rem;
+  font-size: clamp(12px, 0.85vw, 1.6rem);
   font-weight: 600;
   color: #ffffff;
 }
+@media (max-width: 1060px) {
+  #wrap .pd-wrap .pd-detail-list > div .item-cont .txt-wrap .tag-list > li .tag {
+    padding: 0.4rem 0.5rem;
+  }
+}
 #wrap .pd-wrap .pd-series {
-  margin-top: 6.4rem;
+  margin-top: 4%;
 }
 #wrap .pd-wrap .pd-series .con-box {
   box-shadow: rgba(34, 34, 34, 0.2) 7px 7px 29px -7px;
   border-radius: 2rem;
   padding: 3.2rem 4.8rem;
-  flex-wrap: wrap;
   gap: 2rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
 }
+@media (max-width: 1060px) {
+  #wrap .pd-wrap .pd-series .con-box {
+    padding: 1.6rem 2.4rem;
+  }
+}
+#wrap .pd-wrap .pd-series .con-tit {
+  width: 21%;
+}
 #wrap .pd-wrap .pd-series .con-tit strong {
-  font-size: 2.4rem;
+  font-size: clamp(14px, 1.3vw, 2.4rem);
   font-weight: 600;
   line-height: 1.4;
 }
@@ -1279,19 +1295,20 @@ footer .ft-info .lang-wrap .tit::before {
   margin-top: 2.4rem;
 }
 #wrap .pd-wrap .pd-series-list {
-  width: 100%;
-  max-width: 1048px;
+  width: 79%;
 }
 #wrap .pd-wrap .pd-series-list > ul {
-  gap: 1.2rem;
+  width: 100%;
+  gap: 0.6vw;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
 }
 #wrap .pd-wrap .pd-series-list > ul > li {
+  width: calc(20% - 4.8rem);
   flex: 1;
-  padding: 1.2rem;
+  padding: 0.65vw;
   text-align: center;
   border: 1px solid #E4EBEF;
 }
@@ -1301,4 +1318,5 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap .pd-series-list > ul > li > strong {
   font-weight: 600;
+  font-size: clamp(12px, 1vw, 1.6rem);
 }
