--- a/html/include/quick_menu.html
+++ b/html/include/quick_menu.html
@@ -2,3 +2,25 @@
     <a href="javascript:void(0)" class="prev">prev</a>
     <a href="javascript:void(0)" class="next">next</a>
 </div>
+<script>
+    $(document).ready(function(){
+        var scrollInterval;
+        var scrollInner = $("#wrap > .wrap-inner");
+
+        $(".quick-controls .prev").on('mousedown', function() {
+            scrollInterval = setInterval(function() {
+            scrollInner.scrollTop(scrollInner.scrollTop() - 10);
+            }, 20);
+        }).on('mouseup', function() {
+            clearInterval(scrollInterval);
+        });
+
+        $(".quick-controls .next").on('mousedown', function() {
+            scrollInterval = setInterval(function() {
+            scrollInner.scrollTop(scrollInner.scrollTop() + 10);
+            }, 20);
+        }).on('mouseup', function() {
+            clearInterval(scrollInterval);
+        });
+    });
+</script>
