--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -278,6 +278,8 @@
                         > strong{
                             font-weight: 600;
                             font-size: clamp(12px, 1vw, 1.6rem);
+                            word-wrap: break-word;
+                            word-break: keep-all;
                         }
                     }
                 }
