--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1157,13 +1157,13 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap .pd-detail-list > div:first-child {
   padding-left: 1.5vw;
-  max-width: 37%;
+  width: 39%;
 }
 #wrap .pd-wrap .pd-detail-list > div:nth-child(2) {
-  max-width: 40%;
+  width: 39%;
 }
 #wrap .pd-wrap .pd-detail-list > div:last-child {
-  max-width: 25%;
+  width: 22%;
 }
 #wrap .pd-wrap .pd-detail-list > div:not(:last-child) {
   border-right: 1px solid #dddddd;
