--- a/html/include/footer.html
+++ b/html/include/footer.html
@@ -30,6 +30,11 @@
                 <img src="../../assets/images/icon/sns_wechat_icon.svg" alt="sns_wechat" />
             </a>
         </li>
+        <li>
+            <a href="javascript:void(0)">
+                <img src="../../assets/images/icon/sns_kakao_icon.svg" alt="sns_kakao" />
+            </a>
+        </li>
     </ul>
     <div class="fix-controls">
         <ul>
