--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,14 +199,10 @@ body * {
   position: relative;
   color: #7E7E7E;
   font-size: clamp(12px, 0.75vw, 1.4rem);
-  line-height: 1.4;
-  padding-left: 1rem;
+  line-height: 1.5;
 }
-.list-type > li::before {
-  content: "•";
-  position: absolute;
-  top: 0;
-  left: 0;
+.list-type > li:not(:last-child) {
+  margin-bottom: 0.5rem;
 }
 
 /* 버튼(공통) */
@@ -474,14 +470,10 @@ body * {
   position: relative;
   color: #7E7E7E;
   font-size: clamp(12px, 0.75vw, 1.4rem);
-  line-height: 1.4;
-  padding-left: 1rem;
+  line-height: 1.5;
 }
-.list-type > li::before {
-  content: "•";
-  position: absolute;
-  top: 0;
-  left: 0;
+.list-type > li:not(:last-child) {
+  margin-bottom: 0.5rem;
 }
 
 /* 버튼(공통) */
@@ -584,20 +576,9 @@ button:active {
 #wrapper #wrap:not(.main) .wrap-inner > img {
   width: 100%;
 }
-#wrapper #wrap:not(.main) .wrap-inner::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
-}
-#wrapper #wrap:not(.main) .wrap-inner::-webkit-scrollbar-thumb {
-  background: #B1B1B1;
-  border-radius: 0.4rem;
-}
-#wrapper #wrap:not(.main) .wrap-inner::-webkit-scrollbar-track {
-  background: #ffffff;
-}
 #wrapper #wrap .wrap-inner {
-  overflow-x: auto;
   position: relative;
+  overflow-x: auto;
 }
 
 /* lnb */
@@ -1163,7 +1144,7 @@ footer .ft-info .lang-wrap .tit::before {
   width: 39%;
 }
 #wrap .pd-wrap .pd-detail-list > div:last-child {
-  width: 22%;
+  width: 21%;
 }
 #wrap .pd-wrap .pd-detail-list > div:not(:last-child) {
   border-right: 1px solid #dddddd;
@@ -1301,21 +1282,24 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap .pd-series-list {
   width: 79%;
+  height: 100%;
 }
 #wrap .pd-wrap .pd-series-list > ul {
   width: 100%;
+  height: 100%;
   gap: 0.6vw;
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
 }
 #wrap .pd-wrap .pd-series-list > ul > li {
-  width: calc(20% - 4.8rem);
-  flex: 1;
+  width: 100%;
   padding: 0.65vw;
   text-align: center;
   border: 1px solid #E4EBEF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 #wrap .pd-wrap .pd-series-list > ul > li .img-wrap img {
   margin: 0 auto;
