--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -140,7 +140,7 @@
                         width: 39%;
                     }
                     &:nth-child(2){width: 39%;}
-                    &:last-child{width: 22%;}
+                    &:last-child{width: 21%;}
                     &:not(:last-child){border-right: 1px solid $gray03;}
                     .item-cont{
                         position: relative;
@@ -259,16 +259,22 @@
             }
             &-list{
                 width: 79%;
+                height: 100%;
                 > ul{
                     width: 100%;
+                    height: 100%;
                     gap: .6vw;
-                    @include flexbox(row, flex-start, flex-start);
+                    display: flex;
+                    // @include flexbox(row, flex-start, flex-start);
                     > li{
-                        width: calc(100% / 5 - 4.8rem);
-                        flex: 1;
+                        // width: calc(100% / 5 - 4.8rem);
+                        width: 100%;
+                        // flex: 1;
                         padding: .65vw;
                         text-align: center;
                         @include border(1px, #E4EBEF);
+                        @include flexbox(column, center, center);
+                        gap: 1rem;
                         .img-wrap{
                             img{
                                 margin: 0 auto;
