--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -269,6 +269,7 @@
                     > li{
                         // width: calc(100% / 5 - 4.8rem);
                         width: 100%;
+                        max-width: 20%;
                         // flex: 1;
                         padding: .65vw;
                         text-align: center;
