--- a/assets/css/common/_layout.scss
+++ b/assets/css/common/_layout.scss
@@ -10,25 +10,21 @@
         position: relative;
         &:not(.main){
             padding: 6rem 4rem 13rem;
-            @include notebook{padding: 2.4rem 2.6rem 7.4rem;}
+            @media (max-width:1300px) {padding: 4.2rem 3.4rem 13rem;}
+            @include notebook{padding: 2.4rem 2.6rem 7.8rem;}
             .wrap-inner{
-                height: calc(100vh - 18.5rem);
-                @include notebook{height: calc(100vh - 9.8rem);}
+                height: calc(100vh - 19rem);
+                @media (max-width:1300px) {height: calc(100vh - 17.2rem);}
+                @include notebook{height: calc(100vh - 10.2rem);}
             }
             .wrap-inner{
                 box-shadow: rgba($black, 0.2) 0px 7px 29px 0px;
                 > img{width: 100%;}
-                // &::-webkit-scrollbar{width: 8px;height: 8px;}
-                // &::-webkit-scrollbar-thumb{
-                //     background: #B1B1B1;
-                //     border-radius: .4rem;
-                // }
-                // &::-webkit-scrollbar-track{background: $white;}
             }
         }
         .wrap-inner{
             position: relative;
-            overflow-x: auto;//vintpub 계정에서는 overflow:hidden 으로 되어있음
+            overflow-y: auto;//vintpub 계정에서는 overflow:hidden 으로 되어있음
         }
     }
 }
@@ -43,10 +39,12 @@
     z-index: 1;
     background: $white;
     @include flexbox(row, center, center);
-    @include notebook{width: 14rem;}
+    @media (max-width:1300px) {width: 18rem;}
+    @include notebook{width: 15rem;}
     + #wrap{
         margin-left: 24rem;
-        @include notebook{margin-left: 14rem;}
+        @media (max-width:1300px) {margin-left: 18rem;}
+        @include notebook{margin-left: 15rem;}
     }
     &::before{
         content: '';
@@ -57,6 +55,7 @@
         top: 6rem;
         left: 2vw;
         @include background(common, logo, png, no-repeat, contain, center, center);
+        @media (max-width:1300px) {top: 4.2rem;}
         @include notebook{top: 2.4rem;}
     }
     > ul {
@@ -152,7 +151,7 @@ footer{
     @include notebook{
         height: 4rem;
         padding: 0;
-        bottom: 1rem;
+        bottom: 1.4rem;
         border-radius: 1rem;
     }
     > .con-box{
@@ -163,17 +162,29 @@ footer{
         @include flexbox(row, space-between, center);
     }
     .sns-list{
-        gap: clamp(1.8rem, 1.8rem, 3.6rem);
+        gap: clamp(1.8rem, 2.4rem, 3.6rem);
         @include flexbox(row, flex-start, center);
+        @media (max-width:1300px) {gap: 1.6rem;}
+        @include notebook {gap: 1.4rem;}
         > li{
             max-width: 4rem;
             max-height: 4rem;
+            padding: .2rem;
             a{
                 max-width: 100%;
                 width: clamp(1.8rem, 2.8vw, 4rem);
+                height: 100%;
+                text-align: center;
                 > img{
                     max-width: 100%;
+                    height: 100%;
+                    vertical-align: middle;
+                    object-fit: contain;
                     filter: invert(60%) sepia(7%) saturate(706%) hue-rotate(184deg) brightness(91%) contrast(87%);
+                    @include notebook {
+                        width: 2.5rem;
+                        height: 2.5rem;
+                    }
                 }
             }
         }
@@ -185,9 +196,12 @@ footer{
             > li{
                 max-width: 4rem;
                 max-height: 4rem;
+                padding: .2rem;
                 a{
                     max-width: 100%;
                     width: clamp(1.8rem, 2.8vw, 4rem);
+                    height: 100%;
+                    text-align: center;
                     &.prev, &.next{
                         opacity: .6;
                         transition: opacity .25s;
@@ -195,7 +209,14 @@ footer{
                     }
                     > img{
                         max-width: 100%;
+                        height: 100%;
+                        object-fit: contain;
+                        vertical-align: middle;
                         filter: invert(60%) sepia(7%) saturate(706%) hue-rotate(184deg) brightness(91%) contrast(87%);
+                        @include notebook {
+                            width: 2.5rem;
+                            height: 2.5rem;
+                        }
                     }
                 }
             }
