--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -128,6 +128,7 @@
                     font-size: clamp(2rem, 2.2vw, 4rem);
                     font-weight: bold;
                     border-bottom: 2px solid $mainColor;
+                    letter-spacing: -0.02em;
                 }
             }
             &-list{
