--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -652,7 +652,7 @@ button:active {
   }
 }
 #lnb > ul {
-  padding-left: clamp(2rem, 1.5vw, 6rem);
+  padding-left: 2vw;
   gap: clamp(1.6rem, 2.1vw, 4rem);
   display: flex;
   flex-direction: column;
@@ -1174,6 +1174,10 @@ footer .ft-info .lang-wrap .tit::before {
 }
 #wrap .pd-wrap {
   padding: 2.6rem 0 6rem;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 #wrap .pd-wrap .con-box {
   max-width: calc(100% - 6.5vw);
