--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -115,6 +115,10 @@
     // 서브콘텐츠(제품상세페이지)
     .pd-wrap{
         padding: 2.6rem 0 6rem;
+        min-height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         .con-box{
             max-width: calc(100% - 6.5vw);
             @include notebook {
